Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  since Zope 3.2.0b3

    Bug Fixes

      - zope.i18n.interpolate:

        + now if the variable wasn't found in the mapping no substitution
          will happens.

        + fixed interpolation in case "$name $$name", only the first variable
          will be substituted.

      - Fixed a bug in FieldProperty to honor the readonly field.

  Zope 3.2.0b3

    Bug Fixes

      - The test-runner --coverage option didn't work when tested code
        was installed in Python's site-packages, which is the case for
        Zope 3 on windows.

      - Input buffering failed and caused Zope to hang when uploading
        large files and using the Twisted server. 

      - Make zopetest insert rather than append the library path
        (fix spurious test failures from packages in site-packages)

  Zope 3.2.0b2

    New features

      - Added an option to mkzopeinstance to create instances that use
        ZServer, rather than Twisted.

      - Changed the way returning large results is
        handled. Applications can now simply return files to the
        publisher.

    Bug Fixes

      - Fixed a nasty bug that was hiding ``INotFoundError`` exceptions behind
        an empty page.

      - Added input buffering to the twisted integration      

      - Fixed the plumbing in ZServer so that attempts to return large
        output efficiently using iterators can actually succeed.

      - Updated to a new version of twisted that fixes a bug in
        calling request bidy stream read methods without passing
        arguments. http://www.zope.org/Collectors/Zope3-dev/521.

      - In zopeskel/etc/zope.conf.in, use the same default port number
        as the one in ZEO/mkzeoinst.py.
